Make more pretty

--- a/_pages/404.md
+++ b/_pages/404.md
@@ -4,6 +4,9 @@ layout: single
 excerpt: "Page not found. Your pixels are in another canvas."
 sitemap: false
 permalink: /404.html
+header:
+  image: blue-red-banner-thin.png
+  caption: "Photo credit: [WeGraphics](http://wegraphics.net/downloads/free-ultimate-blurred-background-pack/)"
 ---
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
